<resources>
    <string name="app_name">aaaahhhhhhhhhhhhh</string>
    <string name="action_settings">Settings</string>
    <string name="twitter_consumer_key">xq0S2uKXNdv97kq67TKIhLw1n</string>
    <string name="twitter_consumer_secret">wgKkqXJ76vnsjt1r8wsPq9B5lixVAngDoT821nHDWcBQfXfFH4</string>
    <string name="twitter_oauth">TWITTER認証</string>
    <string name="twitter_callback_url">untiburi://twitter</string>
    <string name="menu_refresh">更新</string>

    <string name="menu_change_account">アカウント変更</string>
    <string name="menu_delete_token_and_token_secret">トークンとトークンシークレットを削除</string>
    <string name="title_activity_tweet">TweetActivity</string>
    <string name="menu_tweet">ツイート</string>
    <string name="title_activity_changing_accounts">ChangingAccountsActivity</string>
    <string name="follow_user">フォローする</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_timeline">UserTimelineActivity</string>
    <string name="title_activity_user_home_time_line">UserHomeTimeLineActivity</string>
</resources>