<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ayaya.myapplication19.MainActivity">
    <item
    android:id="@+id/action_settings"
    android:orderInCategory="100"
    android:title="@string/action_settings"
    app:showAsAction="never" />
    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="101"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_change_account"
        android:orderInCategory="102"
        android:title="@string/menu_change_account"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_delete_token_and_token_secret"
        android:orderInCategory="103"
        android:title="@string/menu_delete_token_and_token_secret"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_tweet"
        android:orderInCategory="104"
        android:title="@string/menu_tweet"
        app:showAsAction="ifRoom" />
</menu>
